--- a/DWEC06_Tarea.html
+++ b/DWEC06_Tarea.html
@@ -29,7 +29,7 @@
         <td colspan="6" id="pincel">Estado del pincel</td>
       </tr>
     </table>
-
+    <!-- Cambios -->
     <p></p>
     <div id="zonadibujo"></div>
     <script src="app.js"></script>
